<resources>
    <string name="app_name">CupcakeApplication</string>
    <string name="vanilla">vanilla</string>
    <string name="Chocolate">chocolate</string>
    <string name="redvelvet">red</string>
    <string name="SaltedCaramel">caramel</string>
    <string name="coffee">coffee</string>
    <string name="day1">Wed jan 27</string>
    <string name="day2">Thu jan 28</string>
    <string name="day3">Fri jan 29</string>
    <string name="day4">Sat jan 30</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">total_price %s</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <string name="order_details">Quantity: %1$s \n Flavor: %2$s \nPickup date: %3$s \n
        Total: %4$s \n\n Thank you!</string>
    <string name="send">SEND ORDER TO ANOTHER APP</string>
    <plurals name="cupcakes">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>
</resources>