<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.codelab.cupcakeapplication.CupcakeViewmodel" />

        <variable
            name="flavorFragment"
            type="com.codelab.cupcakeapplication.FlavorFragment" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlavorFragment">

<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/radio">
    <RadioButton android:id="@+id/radio_vanilla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vanilla"
        android:onClick="@{() -> viewModel.setFlavor(@string/vanilla)}"
        android:checked="@{viewModel.flavor.equals(@string/vanilla)}"/>

    <RadioButton android:id="@+id/radio_choco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chocolate"
        android:onClick="@{() -> viewModel.setFlavor(@string/Chocolate)}"
        android:checked="@{viewModel.flavor.equals(@string/Chocolate)}"
        />

    <RadioButton android:id="@+id/radio_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redvelvet"
        android:onClick="@{() -> viewModel.setFlavor(@string/redvelvet)}"
        android:checked="@{viewModel.flavor.equals(@string/redvelvet)}"
        />
    <RadioButton android:id="@+id/radio_salted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SaltedCaramel"
        android:onClick="@{() -> viewModel.setFlavor(@string/SaltedCaramel)}"
        android:checked="@{viewModel.flavor.equals(@string/SaltedCaramel)}"
        />
    <RadioButton android:id="@+id/radio_coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coffee"
        android:onClick="@{() -> viewModel.setFlavor(@string/coffee)}"
        android:checked="@{viewModel.flavor.equals(@string/coffee)}"
        />

</RadioGroup>

    <View
        android:id="@+id/divider"
        style="@style/Widget.Cupcake.Divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/side_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio" />


    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@{@string/subtotal_price(viewModel.price)}"
        android:textSize="25dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        />


    <Button
        android:id="@+id/cancel_flavor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:onClick="@{() -> flavorFragment.cancelOrder()}"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:text="Next"
        android:onClick="@{() -> flavorFragment.goToNextScreen()}"
        app:layout_constraintBaseline_toBaselineOf="@id/cancel_flavor"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintLeft_toRightOf="@id/cancel_flavor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
