<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.codelab.cupcakeapplication.CupcakeViewmodel" />

        <variable
            name="pickupFragment"
            type="com.codelab.cupcakeapplication.PickupFragment" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PickupFragment">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/radio">

        <RadioButton android:id="@+id/date1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{viewModel.date.equals(@string/day1)}"
            android:onClick="@{() -> viewModel.setDate(@string/day1)}"
            android:text="@string/day1"/>

        <RadioButton android:id="@+id/date2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day2"
            android:checked="@{viewModel.date.equals(@string/day2)}"
            android:onClick="@{() -> viewModel.setDate(@string/day2)}"
            />

        <RadioButton android:id="@+id/date3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day3"
            android:checked="@{viewModel.date.equals(@string/day3)}"
            android:onClick="@{() -> viewModel.setDate(@string/day3)}"
            />
        <RadioButton android:id="@+id/date4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day4"
            android:checked="@{viewModel.date.equals(@string/day4)}"
            android:onClick="@{() -> viewModel.setDate(@string/day4)}"
            />

    </RadioGroup>

    <View
        android:id="@+id/divider"
        style="@style/Widget.Cupcake.Divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/side_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio" />


    <TextView
        android:id="@+id/subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@{@string/subtotal_price(viewModel.price)}"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:layout_margin="20dp"
        />


    <Button
        android:id="@+id/cancel_flavor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{() -> pickupFragment.cancelOrder()}"
        android:text="Cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtotal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        app:layout_constraintBaseline_toBaselineOf="@id/cancel_flavor"
        android:onClick="@{() -> pickupFragment.goToNextScreen()}"
        app:layout_constraintLeft_toRightOf="@id/cancel_flavor"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
